still working out how to make this all play out correctly in the iframe, but for now fixed overflow issues

--- a/src/eval-frame/style/cell-styles.css
+++ b/src/eval-frame/style/cell-styles.css
@@ -171,3 +171,7 @@ div.hidden-cell {
   color: #23527c;
   text-decoration: underline;
 }
+
+.rep-container {
+  overflow-x: scroll;
+}
